<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.blisschallenge.emojiapp.views.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_fragment_to_emojis_list_fragment"
            app:destination="@id/emojis_list_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_repos_list_fragment"
            app:destination="@id/repos_list_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_avatars_list_fragment"
            app:destination="@id/avatars_list_fragment" />
    </fragment>

    <fragment
        android:id="@+id/emojis_list_fragment"
        android:name="com.blisschallenge.emojiapp.views.emojis.EmojisListFragment"
        android:label="@string/menu_list_emojis"
        tools:layout="@layout/fragment_emojis_list" />

    <fragment
        android:id="@+id/repos_list_fragment"
        android:name="com.blisschallenge.emojiapp.views.gitrepos.GitReposListFragment"
        android:label="@string/menu_repos"
        tools:layout="@layout/fragment_git_repos_list" />
    <fragment
        android:id="@+id/avatars_list_fragment"
        android:name="com.blisschallenge.emojiapp.views.avatars.AvatarsListFragment"
        android:label="@string/menu_avatars"
        tools:layout="@layout/fragment_avatars_list" />
</navigation>